# Winter-Project-BoogieBot

./: .gitignore  README.md  citations.txt
ROS1_bridge/: Dockerfile  README.md
ROS1_bridge/action_pick/: CMakeLists.txt  package.xml  rl_map_rule.yaml
ROS1_bridge/action_pick/src/: action_pick.cpp
ROS1_bridge/messages/: CMakeLists.txt  package.xml
ROS1_bridge/messages/msg/: RandomList.msg
ROS1_bridge/state/: CMakeLists.txt  package.xml  rl_map_rule.yaml
ROS1_bridge/state/include/state/: action_play.h  op_demo.h
ROS1_bridge/state/list/: actions.yaml
ROS1_bridge/state/src/: state_node.cpp
actions/: README.md
actions/state/launch/: action_nodes.xml
actions/state/src/: action_edit.cpp  action_play.cpp
actions/state/src/dance/: play_demo.cpp
noetic_audio/: Dockerfile  README.md
noetic_audio/audio/: CMakeLists.txt  package.xml
noetic_audio/audio/launch/: launch_audio_nodes.xml
noetic_audio/audio/src/: audio_node.cpp  identify_bpm.py
state/: CMakeLists.txt  package.xml
state/include/state/: action_play.h  dance.h  op_demo.h
state/launch/: action_nodes.xml
state/list/: action_list.yaml  actions.yaml
state/src/: action_edit.cpp  action_pick.cpp  action_play.cpp  state_node.cpp
state/src/dance/: dance.cpp  play_demo.cpp
